// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders a Modal with Header and Footer 1`] = `
<div
  class="BaseBox-bmPWx cvHTym"
  data-blade-component="box"
  data-testid="modal-wrapper"
>
  <div
    aria-hidden="true"
    class="ModalBackdrop__StyledModalBackdrop-sc-69uedf-0 jACqoG"
    data-aria-hidden="true"
    data-blade-component="modal-backdrop"
    data-testid="modal-backdrop"
    style="position: fixed; overflow: auto; top: 0px; right: 0px; bottom: 0px; left: 0px;"
  />
  <div
    aria-label="Test Modal"
    aria-modal="true"
    class="BaseBox-bmPWx Modalweb__ModalContent-sc-107gfd9-0 coWqQS fOFxhE"
    data-blade-component="modal"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="BaseBox-bmPWx"
      data-blade-component="modal-header"
    >
      <div
        class="BaseBox-bmPWx HnFxS"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx isYLKC"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx jPnCFC"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx lhloZM"
              data-blade-component="base-box"
            >
              <div
                class="BaseBox-bmPWx kGcQUv"
                data-blade-component="base-box"
              >
                <h6
                  class="StyledBaseText-dVBfTO dFejDk"
                  data-blade-component="heading"
                >
                  Address Details
                </h6>
                <div
                  class="BaseBox-bmPWx ktWMhw"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx bhAnXJ"
                    data-blade-component="box"
                  >
                    <div
                      class="BaseBox-bmPWx jLCxzZ"
                      data-blade-component="counter"
                    >
                      <div
                        class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 bEaUIc hNXeTn"
                        data-blade-component="base-box"
                      >
                        <div
                          class="BaseBox-bmPWx KJLNh"
                          data-blade-component="base-box"
                        >
                          <p
                            class="StyledBaseText-dVBfTO kHUjbS"
                            data-blade-component="text"
                          >
                            2
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledBaseText-dVBfTO cGMqFI"
                data-blade-component="text"
              >
                Saving addresses will improve your checkout experience
              </p>
            </div>
          </div>
          <div
            class="BaseBox-bmPWx kFTMWM"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx bhAnXJ"
              data-blade-component="box"
            >
              <div
                class="BaseBox-bmPWx jLCxzZ"
                data-blade-component="badge"
              >
                <div
                  class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 dGcjMZ jquvLA"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx KJLNh"
                    data-blade-component="base-box"
                  >
                    <p
                      class="StyledBaseText-dVBfTO guYcJ"
                      data-blade-component="text"
                    >
                      Action Needed
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="BaseBox-bmPWx bhAnXJ"
            data-blade-component="box"
          >
            <button
              aria-label="Close"
              class="StyledIconButtonweb__StyledButton-sc-1f4cg7d-0 gvuEeM"
              data-blade-component="icon-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="20px"
                viewBox="0 0 24 24"
                width="20px"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                  data-blade-component="svg-path"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="BaseBox-bmPWx Divider__StyledDivider-sc-8k3avj-0 jfizlv jvaPlR"
        data-blade-component="divider"
      />
    </div>
    <div
      class="BaseBox-bmPWx cxfEbr"
      data-blade-component="modal-body"
    >
      <p
        class="StyledBaseText-dVBfTO eIdQFo"
        data-blade-component="text"
      >
        Test Content
      </p>
    </div>
    <div
      class="BaseBox-bmPWx"
      data-blade-component="box"
    >
      <div
        class="BaseBox-bmPWx Divider__StyledDivider-sc-8k3avj-0 jfizlv jvaPlR"
        data-blade-component="divider"
      />
      <div
        class="BaseBox-bmPWx kGtVIy"
        data-blade-component="modal-footer"
      >
        <button
          class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 dOlUqh"
          data-blade-component="button"
          role="button"
          type="button"
        >
          <div
            class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
            data-blade-component="base-box"
          >
            <div
              class="StyledBaseText-dVBfTO brGLEM"
              data-blade-component="base-text"
            >
              Save
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal renders a basic Modal 1`] = `
<div
  class="BaseBox-bmPWx cvHTym"
  data-blade-component="box"
  data-testid="modal-wrapper"
>
  <div
    aria-hidden="true"
    class="ModalBackdrop__StyledModalBackdrop-sc-69uedf-0 jACqoG"
    data-aria-hidden="true"
    data-blade-component="modal-backdrop"
    data-testid="modal-backdrop"
    style="position: fixed; overflow: auto; top: 0px; right: 0px; bottom: 0px; left: 0px;"
  />
  <div
    aria-label="Test Modal"
    aria-modal="true"
    class="BaseBox-bmPWx Modalweb__ModalContent-sc-107gfd9-0 coWqQS fOFxhE"
    data-blade-component="modal"
    role="dialog"
    tabindex="0"
  >
    <div
      class="BaseBox-bmPWx cxfEbr"
      data-blade-component="modal-body"
    >
      <p
        class="StyledBaseText-dVBfTO eIdQFo"
        data-blade-component="text"
      >
        Test Content
      </p>
    </div>
  </div>
</div>
`;

exports[`Modal renders a basic Modal of large size 1`] = `
<div
  class="BaseBox-bmPWx cvHTym"
  data-blade-component="box"
  data-testid="modal-wrapper"
>
  <div
    aria-hidden="true"
    class="ModalBackdrop__StyledModalBackdrop-sc-69uedf-0 jACqoG"
    data-aria-hidden="true"
    data-blade-component="modal-backdrop"
    data-testid="modal-backdrop"
    style="position: fixed; overflow: auto; top: 0px; right: 0px; bottom: 0px; left: 0px;"
  />
  <div
    aria-label="Test Modal"
    aria-modal="true"
    class="BaseBox-bmPWx Modalweb__ModalContent-sc-107gfd9-0 bOtjCN fOFxhE"
    data-blade-component="modal"
    role="dialog"
    tabindex="0"
  >
    <div
      class="BaseBox-bmPWx cxfEbr"
      data-blade-component="modal-body"
    >
      <p
        class="StyledBaseText-dVBfTO eIdQFo"
        data-blade-component="text"
      >
        Test Content
      </p>
    </div>
  </div>
</div>
`;

exports[`Modal renders a basic Modal of medium size 1`] = `
<div
  class="BaseBox-bmPWx cvHTym"
  data-blade-component="box"
  data-testid="modal-wrapper"
>
  <div
    aria-hidden="true"
    class="ModalBackdrop__StyledModalBackdrop-sc-69uedf-0 jACqoG"
    data-aria-hidden="true"
    data-blade-component="modal-backdrop"
    data-testid="modal-backdrop"
    style="position: fixed; overflow: auto; top: 0px; right: 0px; bottom: 0px; left: 0px;"
  />
  <div
    aria-label="Test Modal"
    aria-modal="true"
    class="BaseBox-bmPWx Modalweb__ModalContent-sc-107gfd9-0 foYICb fOFxhE"
    data-blade-component="modal"
    role="dialog"
    tabindex="0"
  >
    <div
      class="BaseBox-bmPWx cxfEbr"
      data-blade-component="modal-body"
    >
      <p
        class="StyledBaseText-dVBfTO eIdQFo"
        data-blade-component="text"
      >
        Test Content
      </p>
    </div>
  </div>
</div>
`;
